--- a/app/components/userPage/userPage.css
+++ b/app/components/userPage/userPage.css
@@ -9,6 +9,12 @@
     #userPage .body-container {        
         height: calc(100% - 110px) !important;
     }
+
+    #userPage .change-image-icon {
+        top: 0px !important;
+        right: auto !important;
+        margin-right: 15px !important;
+    }
 }
 
 #userPage .clickable {
@@ -35,7 +41,7 @@
 }
 
 #userPage .user-name {
-    font-size: 38px;
+    font-size: 36px;
     font-weight: bold;
     font-family: var(--main-font);
     color: var(--main-text-color);
@@ -43,8 +49,8 @@
 }
 
 #userPage .user-image {
-    width: 60px;
-    height: 60px;
+    width: 55px;
+    height: 55px;
     align-self: center;
     margin-left: 15px;
     margin-right: 15px;
